# TranscriptSummarizer

./: .firebaserc  .gcloudignore  .gitignore  LICENSE  Makefile  README.md  cloudbuild.yaml  firebase.json  function.go  go.mod  go.sum  main.go  mkdocs.yml
.claude/: settings.json
.claude/skills/gcp/: .skillfish.json
cmd/officials/: main.go
cmd/syncplaylists/: main.go
docs/: pyproject.toml
docs/architecture/: OVERVIEW.md  c1-context.md  c2-containers.md  c3-components.md  c4-code.md  cloud-resources.md
infra/: buildtrigger.sh  remaining-setup.sh  sample-notification.xml  setup.sh
infra/terraform/: PLAN.md  apis.tf  cloudbuild.tf  firestore.tf  function.tf  iam.tf  main.tf  outputs.tf  pubsub.tf  scheduler.tf  secrets.tf  storage.tf  variables.tf
pkg/db/: db_test.go  facade.go  officials_store.go  playlist_store.go  session.go  transcript_store.go  video_store.go
pkg/facebook/: facebook.go  facebook_integration_test.go  facebook_test.go
pkg/officials/: dom.go  dom_test.go  llm.go  llm_test.go  officials.go  officials_integration_test.go
pkg/pipeline/: pipeline.go  pipeline_test.go
pkg/render/: text_renderer.go  text_renderer_test.go
pkg/summarize/: openai.go  summarize_test.go
pkg/transcript/: auth.go  errors.go  playlist.go  playlist_test.go  supadata.go  supadata_test.go  transcriber.go  transcriber_test.go  transcript.go  transcript_integration_test.go  transcript_test.go  transcriptapi.go  transcriptapi_test.go  youtube_transcriber.go  youtube_transcriber_test.go
pkg/webhook/: handler.go  handler_test.go
site/: hugo.toml
(+3 files in other folders)
