[project]
name = "transcriptsummarizer"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "mkdocs>=1.6.1",
    "mkdocs-material>=9.7.6",
    "mkdocs-mermaid2-plugin>=1.2.3",
    "mkdocs-puml>=2.3.0",
    "mkdocs-with-pdf>=0.9.3",
    "pandoc>=2.4",
    "pandoc-kroki-filter",
    "plantuml-markdown>=3.11.2",
]

[tool.uv.sources]
pandoc-kroki-filter = { git = "https://gitlab.com/myriacore/pandoc-kroki-filter.git" }
